# opentls

./: Cargo.toml  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
examples/: google-connect.rs  simple-server.rs
src/: acceptor.rs  async_io.rs  certificate.rs  connector.rs  error.rs  identity.rs  lib.rs  sync.rs  sync_io.rs
src/acceptor/: builder.rs
src/async_io/: acceptor.rs  connector.rs  handshake.rs  runtime.rs  std_adapter.rs  stream.rs
src/connector/: builder.rs
src/sync/: acceptor.rs  connector.rs  stream.rs  test.rs
src/sync/acceptor/: builder.rs
src/sync/connector/: builder.rs
src/sync_io/: acceptor.rs  connector.rs  stream.rs  test.rs
src/sync_io/acceptor/: builder.rs
src/sync_io/connector/: builder.rs
tests/: bad.rs  google-tokio.rs  google.rs  smoke.rs
