[package]
name = "opentls"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+gpg@nauk.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/prisma/opentls/"
homepage = "https://docs.rs/crate/opentls/"
documentation = "https://docs.rs/crate/opentls/"
description = """
TLS connections with OpenSSL.
"""
readme = "README.md"
categories = ["asynchronous", "cryptography", "network-programming", "openssl"]

[features]
default = []
docs = []
vendored = ["openssl/vendored"]
io-tokio = ["tokio", "url"]
io-async-std = ["futures-util", "url"]

[dependencies]
log = "0.4.5"
openssl = "0.10.29"
openssl-sys = "0.9.55"
openssl-probe = "0.1"
futures-util = { version = "0.3.1", features = ["io"], optional = true }
tokio = { version = "0.2.9", default-features = false, features = ["io-util"], optional = true }
url = { version = "2.1.1", optional = true }

[dev-dependencies]
hex = "0.4.2"
env_logger = "0.7.1"
async-std = { version = "1.6.0", features = ["attributes"] }
tokio = { version = "0.2.9", features = ["full"] }
cfg-if = "0.1.10"
futures = "0.3.1"

[[test]]
name = "google"
required-features = [ "io-async-std" ]

[[test]]
name = "google-tokio"
required-features = [ "io-tokio" ]

[[test]]
name = "bad"
required-features = [ "io-async-std" ]

[[test]]
name = "smoke"
required-features = [ "io-async-std" ]
